fix use flex-flow instead of flex-direction + flex-wrap

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,7 +1,6 @@
 @mixin d-flex($direction: row, $justify: flex-start, $align: flex-start, $wrap: nowrap) {
   display: flex;
-  flex-direction: $direction;
+  flex-flow: $direction $wrap;
   justify-content: $justify;
   align-items: $align;
-  flex-wrap: $wrap;
 }
